Update web assignment project

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -47,12 +47,13 @@
         <div class="hero-content">
             <div class="hero-badge">Welcome to My Portfolio</div>
             <h1 class="hero-title">
-                Creative Developer &
-                <span class="gradient-text">Designer</span>
+                Computer Science Student &
+                <span class="gradient-text">Aspiring Full Stack Developer</span>
             </h1>
             <p class="hero-description">
-                Passionate developer and designer who loves creating beautiful and functional digital experiences.
-                With expertise in modern web technologies, I bring ideas to life through code and creativity.
+                A highly motivated 3rd-year Computer Science Engineering student with excellent academic performance (CGPA: 9.78/10). 
+                Passionate about full-stack development with hands-on experience in Java, Python, JavaScript, and web technologies. 
+                Demonstrated leadership through NCC and event organization.
             </p>
             <div class="hero-buttons">
                 <a href="resume.html" class="btn btn-primary">
